--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "13.3.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
     "react-slick": "^0.29.0",
     "typescript": "5.0.4"
